static/css/s2.css
/* ... */
.readerContent {
  width: 100%;
  height: 100%;
  background-color: inherit;
}
.dark .readerContent {
  color: white;
}
.textColumn {
  width: 100%;
  height: 100%;
  overflow-y: scroll;
  overflow-x: hidden;
  -webkit-overflow-scrolling: touch;
  position: relative;
  padding: 0px 0 40%;
  box-sizing: border-box;
  background-color: inherit;
}
/* Adjusting for 17px scrollbars, to keep content centered
   Only done in multiPanel mode now as a proxy for whether scrollbars take up width (on desktop they do, not on mobile) */
.multiPanel .english .textColumn, .multiPanel .bilingual .textColumn {
  padding-left: 17px;
}

.multiPanel .hebrew .textColumn {
  padding-right: 17px;
}
.textColumn .loadingMessage.base {
  margin: 30px 0;
  color: #999;
  text-align: center;
  font-weight: lighter;
  font-style: normal;
  font-family: "proxima-nova", "Helvetica Neue", Helvetica, sans-serif;
  text-transform: uppercase;
  letter-spacing: 1px;
  /*border-bottom: 4px solid #E6E5E6;*/
  padding: 0 6px 3px;
}
.textColumn .loadingMessage.base.prev {
  margin: 70px 0 30px;
}
.textColumn .loadingMessage.base.next {
  margin: 30px 0 70px;
}
.textColumn .loadingMessage.base.next.final {
}
.he, .int-he {
  font-size: 120%;
}
.readerPanel .he {
  font-family: "Taamey Frank", "Times New Roman", serif;
  direction: rtl;
  text-align: right;
}
/*.readerPanel.hebrew {
  direction: rtl;
}*/
/*.readerPanel.english {
  direction: ltr;
}*/
.interface-hebrew .readerPanel .readerNavMenu{
  direction: rtl;
}
.readerPanel.english .he {
  display: none;
}
.readerPanel.english .en {
  display: inline;
}
.readerPanel.hebrew .he {
  display: inline;
  text-align: right;
}
.readerPanel.hebrew .he .enInHe {
  font-size: 83%;
  unicode-bidi: isolate;
}
.readerPanel.hebrew .en {
  display: none;
}
.readerPanel.english .heOnly .he,
.readerPanel.bilingual .heOnly .he {
  display: inline;
}
.languageToggle {
  display: inline;
  line-height: 32px;
}
.languageToggle img {
  opacity: 0.2;
  height: 18px;
}
.systemPanel.english .content .he {
  display: none;
}
.systemPanel.hebrew .content .en {
  display: none;
}
.interace-english .systemPanel .content .int-en {
  display: inline;
  font-family: "proxima-nova", "Helvetica Neue", "Helvetica", sans-serif;
}
.interface-hebrew .systemPanel .content .int-he {
  display: inline;
  font-family: "Open Sans Hebrew", sans-serif;
}
.loadingMessage {
  font-size: 14px;
  font-style: italic;
}
.bilingual .loadingMessage .he {
  display: none;
}
.headroom {
  transition: transform 200ms linear;
  -webkit-transition: 200ms linear;
  transition-property: transform;
}
.headroom--pinned {
  transform: translateY(0%);
  -webkit-transform: translateY(0%);
}
.headroom--unpinned {
  transform: translateY(-100%);
  -webkit-transform: translateY(-100%);
}
.headroomOff.headroom--unpinned {
  transform: translateY(0%);
  -webkit-transform: translateY(0%);
}
.readerPanel.light {
  background-color: white;
}
.readerPanel.sepia {
  background-color: #f7f7f7;
}
.readerPanel.dark {
  background-color: #333331;
}
.readerNavMenu {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  z-index: 101;
  background-color: #F9F9F7;
}
.readerNavMenu .content {
  box-sizing: border-box;
  padding: 80px 10px 10px;
  height: 100%;
  overflow-y: scroll;
  -webkit-overflow-scrolling: touch;
  font-size: 14px;
}
/* Adjusting for 17px scrollbars, to keep content centered */
.multiPanel .english .readerNavMenu .content, .multiPanel .bilingual .readerNavMenu .content {
}
.interface-hebrew.multiPanel .readerNavMenu .content {
  padding-right: 40px;
}
.multiPanel .readerNavMenu .content {
  padding: 110px 30px;
}
.multiPanel .readerNavMenu.noHeader .content {
  padding-top: 70px;
}
.multiPanel .readerNavMenu.noHeader.compare .content {
  padding-top: 80px;
}
.readerNavMenu .content .contentInner {
  max-width: 660px;
  margin: 0 auto;
}
.readerNavTop {
  position: absolute;
  width: 100%;
  background-color: #F9F9F7;
  border-bottom: 1px solid #E2E2E1;
  box-sizing: border-box;
  height: 58px;
  direction: ltr;
  z-index: 1;
  padding: 0px 30px;
  vertical-align: middle;
  line-height: 58px;
}
.singlePanel .readerNavTop {
  padding: 0 10px;
}
.readerNavTop.colorLineOnly {
  height: auto;
  border-bottom: none;
  padding: 0;
}
.readerPanel .readerNavTop h2 {
  margin-bottom: 0px;
  font-weight: 400;
  color: black;
  line-height: 38px;
}
.readerNavTop.search {
}
.readerNavMenu .readerSearch {
  margin: 0;
  width: 60%;
  box-sizing: border-box;
  border: none;
  background-color: inherit;
  font-size: 18px;
  font-family: "adobe-garamond-pro", Georgia;
  height: 48px;
  margin-top: 9px;
}
.readerNavMenu .readerSearch:focus {
  outline: 0;
}
.readerNavTop .readerNavMenuSearchButton,
.readerNavTop .readerNavMenuCloseButton,
.readerNavTop .readerNavMenuMenuButton,
.readerNavTop .readerOptions {
  text-align: left;
  width: 40px;
  height: 48px;
  margin-top: 5px;
  box-sizing: border-box;
  color: #BFBFBF;
  float: left;
  font-size: 20px;
  vertical-align: middle;
  cursor: pointer;
}
.readerNavTop .readerNavMenuCloseButton{
  font-size: 46px;
  padding: 0;
  line-height: 48px;
}
.readerNavTop .readerOptions {
  float: right;
  text-align: right;
}
.readerNavTop .readerOptions img {

}
.sefariaLogo img {
  width: 110px;
}
.readerNavMenu h1 {
  text-align: center;
  color: #333;
  height: 70px;
  position: relative;
  font-size: 26px;
  font-weight: lighter;
  letter-spacing: 1px;
  margin: 0 0 10px 0;
}
h1 .languageToggle {
  position: absolute;
  right: 0;
  color: #ccc;
  display: block;
  width: 38px;
  height: 32px;
  border: 1px solid #ccc;
  border-radius: 4px;
  line-height: 34px;
  cursor: pointer;
}
h1 div.languageToggle .en {
  font-family: "Taamey Frank", "Times New Roman", serif;
  font-weight: normal;
}
h1 .languageToggle .he {
  font-family: "adobe-garamond-pro", Georgia, serif;
  font-size: 22px;
}
/* ... */

